# actionability-energy

./: .gitignore  README.md  pyproject.toml  requirements.txt
actionability/: __init__.py  jacobians.py  metrics.py  plotting.py  repair.py  residuals.py
configs/: arm.yaml  car.yaml  point_mass.yaml  pusher.yaml
envs/: __init__.py  nonholonomic_car.py  planar_pusher.py  point_mass.py  two_link_arm.py
experiments/: common.py  exp_embodiment_swap.py  exp_failure_prediction.py  exp_learned_jacobian.py  exp_repair.py  exp_robustness.py  exp_visual_keypoint.py  run_all.py
figures/: color_palette.md  design_notes.md  figure_plan.md  plot_style.py
paper/: main.tex  references.bib
paper/sections/: abstract.tex  appendix.tex  conclusion.tex  experiments.tex  introduction.tex  limitations.tex  method.tex  related_work.tex  reproducibility.tex  theory.tex
paper/tables/: failure_prediction.tex  hostile_baselines.tex  repair_success.tex
references/: metadata.md
reports/: EXECUTION_REPORT.md  LIMITATIONS_AND_FAILURES.md  NOVELTY_AUDIT.md
results/processed/: calibration_bins.csv  failure_prediction_metrics.csv  repair_results.csv  robustness_metrics.csv  run_manifest.json  visual_keypoint_metrics.csv
results/raw/: embodiment_swap.csv  environment_examples.npz  failure_prediction_scores.csv  learned_jacobian.csv  repair_trajectories.npz  robustness_scores.csv  (+2 more)
scripts/: compile_paper.py  compile_paper.sh  make_plots.sh  reproduce_all.sh  reproduce_cpu.sh
tests/: test_envs.py  test_jacobians.py  test_repair.py  test_residuals.py  test_upgraded_experiments.py
