[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "actionability-energy"
version = "0.1.0"
description = "Low-compute actionability residual and trajectory repair benchmarks."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pandas",
  "scikit-learn",
  "pytest",
  "tqdm",
]

[tool.setuptools]
packages = ["actionability", "envs", "experiments"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
